--- a/fit_a_stright_line.ipynb
+++ b/fit_a_stright_line.ipynb
@@ -38,7 +38,7 @@
       "source": [
         "!pip install plotly -U"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,9 +61,10 @@
         "import matplotlib.pyplot as plt\n",
         "from plotly import graph_objs as go\n",
         "import plotly as py\n",
-        "from scipy import optimize"
+        "from scipy import optimize\n",
+        "print(\"hello\")"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -100,7 +101,7 @@
         "fig.show()\n",
         "print(\"m=\" + str(m) + \" n=\" + str(n) )\n"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -164,7 +165,7 @@
         "    p_opt = optimize.fmin(dist_func, np.array([0,0]))\n",
         "    return p_opt"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +180,7 @@
       "source": [
         "stright_line_fmin(x,y)"
       ],
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +234,7 @@
         "    fig.show()\n",
         "    return X_pca_inv[1, 1]/X_pca_inv[1, 0], y.mean() - x.mean()*X_pca_inv[1, 1]/X_pca_inv[1, 0]"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -251,7 +252,7 @@
         "c = straight_line_pca(x[:, np.newaxis],y[:, np.newaxis])\n",
         "c"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -321,7 +322,7 @@
         "    # solution: h = (X^t *X)^-1 * X^t * Y\n",
         "    return np.dot(np.linalg.inv(np.dot(x.transpose(), x)), np.dot(x.transpose() , y))"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -336,7 +337,7 @@
       "source": [
         "least_square_fit(np.append(x[:, np.newaxis], np.ones_like(x[:, np.newaxis]), axis=1), y)"
       ],
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,7 +368,7 @@
         "    u, s, vh = np.linalg.svd(X)\n",
         "    return vh[-1, :2]/vh[-1,-1]"
       ],
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -383,7 +384,7 @@
         "m_, n_ = svd_fit(np.append(x[:, np.newaxis], np.ones_like(x[:, np.newaxis]), axis=1), y[:, np.newaxis])\n",
         "print(m_, n_)"
       ],
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,7 +440,7 @@
         "        \n",
         "        "
       ],
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -454,7 +455,7 @@
         "    mod_func = lambda x : x*m + n\n",
         "    return mod_func"
       ],
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -469,7 +470,7 @@
         "num_of_points_to_determine_model = 2\n",
         "dist_th = 0.2"
       ],
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -489,7 +490,7 @@
         "y_ransac = best_model(x_ransac)\n",
         "print(y_ransac)"
       ],
-      "execution_count": 163,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,7 +521,7 @@
         "          go.Scatter(x=x[item[3]], y=y[item[3]], mode='markers', line=dict(width=2, color=\"red\"), name=\"selected points\"), \n",
         "          go.Scatter(x=item[1], y=item[2], mode='lines', name='current line')]) for item in ransac_run]"
       ],
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -554,7 +555,7 @@
         "\n",
         "fig.show()"
       ],
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
